2008-04-16  Johannes Schmid  <jhs@gnome.org>

	* plugins/search/search-replace_backend.c (isawordchar),
	(extra_match), (get_next_match):
	
	Make searching utf-8 aware. We still need to fix encodings for
	search/replace in files as it is currently assumed they are utf-8 like
	the editors.

2008-04-16  Johannes Schmid  <jhs@gnome.org>
	
	Patch from Ignacio Casal Quinteiro:
	* plugins/file-loader/anjuta-recent-chooser-menu.c
	(anjuta_recent_chooser_menu_insert_item),
	(anjuta_recent_chooser_menu_populate):
	* plugins/file-loader/plugin.c (activate_plugin):
	Fix recent files in the toolbar
	
	* plugins/tools/plugin.c (ipreferences_merge):
	Fixed some warnings

2008-04-13  Sébastien Granjoux  <seb.sfo@free.fr>

	* libanjuta/anjuta-preferences.c: Fixed a typo in the previous patch

2008-04-13  Naba Kumar  <naba@naba-desktop>

	* libanjuta/anjuta-preferences.c (register_callbacks): Fixed a typo.
	* plugins/language-support-cpp-java/anjuta-language-cpp-java.glade:
	Do not enable brace autocompletion by defualt because it annoying for
	fast typist (i.e. it's easier to type ending brace than move carat)
	and it's currently broken for scintilla.

2008-04-13  Naba Kumar  <naba@naba-desktop>

	* src/Makefile.am: Added libglade flags. patch from Marc Oude Kotte.
	* src/about.c (on_about_plugin_activate): Removed dead code.
	* src/main.c: Make smaller include.

2008-04-12  Naba Kumar  <naba@naba-desktop>

	* src/anjuta_cbs.c, src/getline.c, src/utilities.c,
	src/utilities.h: Removed dead files.
	* src/widget-registry.c, src/widget-registry.h: Removed more dead
	files.

2008-04-12  Naba Kumar  <naba@naba-desktop>

	* src/action-callbacks.c: Removed unneeded gnome.h include.
	* src/anjuta-app.c (on_toolbar_view_toggled): Removed outdated comment.

2008-04-12  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	Reviewed by Naba Kumar  <naba@gnome.org>:
	* libanjuta/anjuta-utils.{ch}:
	Added anjuta_utils_get_user_config_dir. This func is used
	to get the user config directory.